# bsbingo

./: .copier-answers.yml  .dockerignore  .envrc  .envrc.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  .rumdl.toml  .secrets.baseline  .vale.ini  CHANGELOG.md  CLAUDE.md  Makefile  README.md  Taskfile.yml  Tiltfile  _typos.toml  cchk.toml  checkmake.ini  flake.nix  lychee.toml  mkdocs.yml  pyproject.toml  tasks.py
.claude/skills/speckit-agent-context-update/: SKILL.md
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-constitution/: SKILL.md
.claude/skills/speckit-converge/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.github/: dependabot.yml
.github/agents/: speckit.agent-context.update.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/prompts/: speckit.agent-context.update.prompt.md  speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.github/workflows/: main.yaml  semantic-release.yaml
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/agent-context/: README.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: setup-tasks.sh
.specify/templates/: constitution-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
argocd/base/bsbingo/: app.yaml
argocd/base/ingress/: app.yaml
argocd/prod/apps/: kustomization.yaml
argocd/prod/ingress/: kustomization.yaml
argocd/sandbox/apps/: kustomization.yaml
argocd/sandbox/ingress/: cert-manager-issuer.yaml  certificates.yaml  ingress.yaml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/bingo/: __init__.py  admin.py  apps.py  domain.py  forms.py  models.py  tests.py  urls.py  views.py
backend/bingo/management/: __init__.py
backend/bingo/management/commands/: __init__.py  seed_buzzwords.py  set_buzzwords_active.py
backend/bingo/migrations/: 0001_initial.py  0002_boardsquare_position_range.py  __init__.py
backend/bingo/static/bingo/css/: bingo.css
backend/bingo/templates/: 404.html
backend/bingo/templates/bingo/: base.html  board.html  home.html  join.html
backend/bingo/templates/bingo/partials/: _square.html  _winner_banner.html
backend/bsbingo/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
backend/bsbingo/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/bsbingo/templates/: base.html
backend/bsbingo/users/: adapters.py  admin.py  apps.py  urls.py  views.py
backend/bsbingo/users/tests/: factories.py  test_forms.py  test_models.py  test_urls.py  test_views.py
backend/bsbingo/utils/: __init__.py  context_processors.py  debugger.py  healthcheck.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/requirements/: base.in  base.txt  local.in  local.txt  production.txt  tests.txt
backend/tests/integration/: test_bingo_performance.py  test_bingo_views.py  test_local_settings.py  test_production_settings.py
backend/tests/unit/: test_database_config.py  test_domain.py  test_test_settings.py
bootstrap-cluster/: .env  README.md  argocd.yaml  k3s.yaml  root-app.template.yaml
bootstrap-cluster/prod/: .env
bootstrap-cluster/sandbox/: .env
bootstrap-cluster/staging/: .env
docs/: README.md  architecture.md  dataflow.md  debug.md  deployment.md  development.md  monitoring.md  project-overview.md  qa.md  secrets.md  sentry.md  user-guide.md
docs/sphinx/: conf.py  deployment.md  development.md  frontend-ux.md  gameplay.md  index.md  user-guide.md
frontend/: package-lock.json  package.json  playwright.config.ts  playwright.unit.config.ts  tsconfig.json
frontend/e2e/: create-and-share.spec.ts  dead-ends.spec.ts  docs-screenshots.spec.ts  join.spec.ts  play-and-win.spec.ts  theme-toggle.spec.ts
frontend/e2e/support/: game-flow.ts  global-setup.ts
frontend/src/: copy-link.ts  theme-toggle.ts
frontend/tests/unit/: copy-link.spec.ts  theme-toggle.spec.ts
k8s/_monitoring/: loki-stack-values.yaml
k8s/argocd/: README.md
k8s/base/: app.configmap.yaml  ingress.yaml  kustomization.yaml
k8s/local/: kustomization.yaml  postgres.yaml  secrets.yaml
k8s/prod/: kustomization.yaml
k8s/sandbox/: certificate.yaml  ingress-route.yaml  kustomization.yaml  postgres.cnpg.yaml
specs/001-django-postgresql-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-django-postgresql-backend/checklists/: requirements.md
specs/001-django-postgresql-backend/contracts/: database-config.md
specs/002-buzzword-bingo-game/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-buzzword-bingo-game/checklists/: requirements.md
specs/002-buzzword-bingo-game/contracts/: admin-interface.md  http-endpoints.md
specs/003-frontend-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-polish/checklists/: requirements.md
specs/003-frontend-polish/contracts/: ui-contract.md
terraform/: README.md  Taskfile.yml
terraform/bootstrap/: init.tf
terraform/github/: check_oidc_provider.sh  oidc.tf
terraform/modules/base/: Makefile  cloudfront.tf  ec2-iam-role.tf  ec2.tf  elb.tf  (+5 more)
terraform/prod/: backend.tf  cluster.tf
terraform/sandbox/: backend.tf  cluster.tf
terraform/staging/: backend.tf  cluster.tf
(+3 files in other folders)
