[dependency-groups]
test = [
    "deptry>=0.25.1,<0.26.0",
    "hypothesis[django]>=6.156.6",
    "pytest-django>=4.12.0",
    "pytest>=9.1.1",
]

[project]
dependencies = [
    "django-htmx>=1.27.0",
    "django>=6.0.7",
    "psycopg[binary,pool]>=3.3.4",
    "social-auth-app-django>=6.0.0",
]
description = "Add your description here"
name = "bsbingo"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.ruff]
extend-exclude = [
    "tasks.py",
]
fix = true
line-length = 88

[tool.ruff.lint]
extend-fixable = [
    "D",
]
extend-safe-fixes = [
    "D",
    "UP047",
]
ignore = [
    "ANN401",
    "COM812",
    "D203",
    "D212",
]
select = [
    "ALL",
]

[tool.uv]
add-bounds = "major"
