[dependency-groups]
test = [
    "deptry>=0.25.1,<0.26.0",
    "django-stubs>=6.0",
    "hypothesis[django]>=6.156.6",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "pytest>=9.1.1",
]

[project]
dependencies = [
    "django-htmx>=1.27.0",
    "django>=6.0.7",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "social-auth-app-django>=6.0.0",
    "uvicorn-worker>=0.4.0",
    "uvicorn>=0.38.0",
]
description = "Add your description here"
name = "bsbingo"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.pyrefly]
project-includes = [
    "**/*.ipynb",
    "**/*.py*",
]
search-path = [
    "backend",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = [
    "backend",
]

[tool.ruff]
extend-exclude = [
    "tasks.py",
]
fix = true
line-length = 88

[tool.ruff.lint]
extend-fixable = [
    "D",
]
extend-safe-fixes = [
    "D",
    "UP047",
]
ignore = [
    "ANN401",
    "COM812",
    "D203",
    "D212",
]
select = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"backend/*/migrations/*.py" = [
    "D100",
    "D101",
    "E501",
    "RUF012",
]
"backend/tests/**" = [
    "ANN001",
    "ANN201",
    "ARG001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "INP001",
    "PLR2004",
    "S101",
    "S311",
]
"docs/sphinx/conf.py" = [
    "INP001",
]

[tool.uv]
add-bounds = "major"
