[dependency-groups]
dev = [
    "argon2-cffi-bindings==25.1.0",
    "argon2-cffi==25.1.0",
    "asgiref==3.11.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "autobahn==25.11.1",
    "automat==25.4.16",
    "cbor2==5.7.1",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "constantly==23.10.4",
    "crispy-bootstrap5==2025.6",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "django-allauth==65.13.1",
    "django-crispy-forms==2.5",
    "django-debug-toolbar==6.1.0",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django==6.0",
    "executing==2.2.1",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "ipdb==0.13.13",
    "ipython-pygments-lexers==1.1.1",
    "ipython==9.8.0",
    "jedi==0.19.2",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "msgpack==1.1.2",
    "packaging==25.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "prek>=0.2.21",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-ubjson==0.16.1",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydevd-pycharm==243.26053.29",
    "pygments==2.19.2",
    "pyopenssl==25.3.0",
    "pyprojectsort>=0.4.0",
    "redis==7.1.0",
    "ruff>=0.14.8",
    "rumdl>=0.0.191",
    "sentry-sdk==2.47.0",
    "service-identity==24.2.0",
    "sqlparse==0.5.4",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "ujson==5.11.0",
    "urllib3==2.6.1",
    "wcwidth==0.2.14",
    "werkzeug==3.1.4",
    "zope-interface==8.1.1",
]
test = [
    "argon2-cffi-bindings==25.1.0",
    "argon2-cffi==25.1.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "autobahn==25.11.1",
    "automat==25.4.16",
    "cbor2==5.7.1",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "constantly==23.10.4",
    "coverage==7.13.0",
    "crispy-bootstrap5==2025.6",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "django-allauth==65.13.1",
    "django-coverage-plugin==3.2.0",
    "django-crispy-forms==2.5",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-test-plus==2.3.0",
    "django==6.0",
    "factory-boy==3.3.3",
    "faker==38.2.0",
    "flake8==7.3.0",
    "freezegun==1.5.5",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "iniconfig==2.3.0",
    "mccabe==0.7.0",
    "msgpack==1.1.2",
    "packaging==25.0",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "py-ubjson==0.16.1",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pycodestyle==2.14.0",
    "pycparser==2.23",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyopenssl==25.3.0",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest-freezegun==0.4.2",
    "pytest-mock==3.15.1",
    "pytest-sugar==1.1.1",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "redis==7.1.0",
    "sentry-sdk==2.47.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sqlparse==0.5.4",
    "termcolor==3.2.0",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "urllib3==2.6.1",
    "zope-interface==8.1.1",
]

[project]
dependencies = [
    "anyio==4.12.0",
    "argon2-cffi-bindings==25.1.0",
    "argon2-cffi==25.1.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "autobahn==25.11.1",
    "automat==25.4.16",
    "boto3==1.42.5",
    "botocore==1.42.5",
    "cbor2==5.7.1",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "constantly==23.10.4",
    "crispy-bootstrap5==2025.6",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "django-allauth==65.13.1",
    "django-anymail==13.1",
    "django-crispy-forms==2.5",
    "django-environ==0.12.0",
    "django-htmx>=1.27.0",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "django-storages==1.14.6",
    "django==6.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "jmespath==1.0.1",
    "msgpack==1.1.2",
    "packaging==25.0",
    "pillow==12.0.0",
    "psycopg2-binary>=2.9.11",
    "py-ubjson==0.16.1",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pyopenssl==25.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "s3transfer==0.16.0",
    "sentry-sdk==2.47.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sqlparse==0.5.4",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "ujson==5.11.0",
    "urllib3==2.6.1",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "zope-interface==8.1.1",
]
description = "BS/Buzzword Bingo!"
name = "bsbingo"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.coverage.run]
concurrency = [
    "greenlet",
    "thread",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "asyncpg",
    "gunicorn",
    "pytest-timeout",
    "uvicorn",
    "yamllint",
]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = true
python_version = "3.12"
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disable_error_code = [
    "attr-defined",
]
module = "migrations.*"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "strict"
env = [
    "APP_ENV=pytest",
]
timeout = 300

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
extend-fixable = [
    "D",
]
extend-safe-fixes = [
    "D",
    "UP047",
]
ignore = [
    "COM812",
    "D203",
    "D212",
]
select = [
    "ALL",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN401",
    "D1",
    "PLR0913",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "SLF001",
]
